--- a/Mahamining_e-Auction/AdminMaster.Master
+++ b/Mahamining_e-Auction/AdminMaster.Master
@@ -368,9 +368,14 @@
                                 </div>
                             </div>
                             <div class="col text-end">
-                                <button type="button" data-button="cancel" id="btnClear" class="btn mx-1 dept_submit pt-2"><i class="fa fa-times"></i>Clear</button>
+                                <button type="button" data-button="cancel" id="btnClear" class="btn btn-sm mx-1 btn-outline-danger"><i class="fa fa-times me-1"></i>Clear</button>
+                                <button type="button" data-button="" id="" class="btn btn-sm mx-0 btn-outline-primary"><i class="fa fa-eye me-1"></i>Preview</button>
+                                <button type="button" id="btnSave" class="btn btn-sm btn-outline-success mx-1" data-bs-toggle="modal" data-bs-target="#submitModal"><i class="fa fa-sign-out-alt me-1"></i><span class="font-weight-normal">Submit</span></button>
+                                
+                                
+                                <%--<button type="button" data-button="cancel" id="btnClear" class="btn mx-1 dept_submit pt-2"><i class="fa fa-times"></i>Clear</button>
                                 <button type="button" data-button="" id="" class="btn mx-0 dept_submit pt-2"><i class="fa fa-eye"></i>Preview</button>
-                                <button type="button" id="btnSave" class="btn dept_submit pt-2 mx-1" data-bs-toggle="modal" data-bs-target="#submitModal"><i class="fa fa-sign-out-alt"></i><span class="font-weight-normal">Submit</span></button>
+                                <button type="button" id="btnSave" class="btn dept_submit pt-2 mx-1" data-bs-toggle="modal" data-bs-target="#submitModal"><i class="fa fa-sign-out-alt"></i><span class="font-weight-normal">Submit</span></button>--%>
                             </div>
                         </div>
                     </div>
