--- a/Mahamining_e-Auction/css/StyleSheet.css
+++ b/Mahamining_e-Auction/css/StyleSheet.css
@@ -12,11 +12,17 @@
     --table-head-color: #e8f3ff;
     --table-border-color: #94c7ff;
     --blue-color: #2F9CFC;
+    --blue-dark-color: #177ad1;
     --gray-color: #777474;
+    --purple-light-color: #4680FF;
+    --purple-dark-color: #2962e1;
 }
 
 .text-theme {
     color: var(--main-color);
+}
+.text-purple {
+    color: var(--purple-dark-color);
 }
 .text-orange {
     color: var(--orange-color);
@@ -41,6 +47,9 @@
 }
 .shadow-theme {
     box-shadow: 0px 3px 6px #24599126;
+}
+.bg-theme-light {
+    background: #EEF2F6;
 }
 .fw-500 {
     font-weight: 500 !important;
@@ -68,15 +77,54 @@
     background-color: #234160 !important;
     border-color: #234160 !important;
 }
-.btn-blue.btn-outline-primary {
-    color: var(--blue-color) !important;
+.btn-blue {
+    color: #fff;
+    background-color: var(--blue-color) !important;
     border-color: var(--blue-color) !important;
 }
+
+    .btn-blue:hover {
+        color: #fff !important;
+        background-color: var(--blue-dark-color) !important;
+        border-color: var(--blue-dark-color) !important;
+    }
+
+    .btn-blue.btn-outline-primary {
+        color: var(--blue-color) !important;
+        background-color: transparent !important;
+        border-color: var(--blue-color) !important;
+    }
 .btn-blue.btn-outline-primary:hover {
     color: #fff !important;
     background-color: var(--blue-color) !important;
     border-color: var(--blue-color) !important;
 }
+
+
+
+.btn-purple-light {
+    color: #fff;
+    background-color: var(--purple-light-color) !important;
+    border-color: var(--purple-light-color) !important;
+}
+
+    .btn-purple-light:hover {
+        color: #fff !important;
+        background-color: var(--purple-dark-color) !important;
+        border-color: var(--purple-dark-color) !important;
+    }
+
+.btn-purple-light-outline {
+    color: var(--purple-light-color) !important;
+    background-color: transparent !important;
+    border-color: var(--purple-light-color) !important;
+}
+    .btn-purple-light-outline:hover {
+        color: #fff !important;
+        background-color: var(--purple-light-color) !important;
+        border-color: var(--purple-light-color) !important;
+    }
+
 .border-bottom-success {
     border-bottom: 2px solid rgb(39, 199, 39) !important;
 }
