--- a/Mahamining_e-Auction/css/StyleSheet.css
+++ b/Mahamining_e-Auction/css/StyleSheet.css
@@ -170,6 +170,10 @@
     padding: 0.375rem 1.25rem 0.375rem 0.75rem;
     background-position: right 0.25rem center;
 }
+.form-select-lightBlue {
+    background-color: #DAEBF9;
+    font-size: .95rem;
+}
 
 
 
