--- a/Mahamining_e-Auction/css/StyleSheet.css
+++ b/Mahamining_e-Auction/css/StyleSheet.css
@@ -17,6 +17,7 @@
     --purple-light-color: #4680FF;
     --purple-dark-color: #2962e1;
     --green-light-color: #A6DBA2;
+    --green-dark-color: #25AB52;
 }
 
 .text-theme {
@@ -37,6 +38,9 @@
 
 .text-green {
     color: #27c727;
+}
+.text-green-dark {
+    color: var(--green-dark-color) !important;
 }
 
 .text-gray {
@@ -587,7 +591,7 @@ table.fold-table {
 }
 
 .eAuction-table .event_table.table tr.active td {
-    color: #198754;
+    color: #25AB52;
     font-weight: 600;
     background: #fff;
 }
@@ -601,20 +605,20 @@ table.fold-table {
         border-color: #222222;
     }
 
-    .eAuction-table .event_table.table tr.active td .btn-light {
-        color: #198754;
-        border-color: #198754;
-    }
+.eAuction-table .event_table.table tr.active td .btn-light {
+    color: #25AB52;
+    border-color: #25AB52;
+}
 
         .eAuction-table .event_table.table tr.active td .btn-light span {
             font-weight: 600;
         }
 
-        .eAuction-table .event_table.table tr.active td .btn-light:hover {
-            color: #fff;
-            background-color: #198754;
-            border-color: #198754;
-        }
+    .eAuction-table .event_table.table tr.active td .btn-light:hover {
+        color: #fff;
+        background-color: #25AB52;
+        border-color: #25AB52;
+    }
 
 
 
@@ -1907,8 +1911,8 @@ table.event_table {
     .scroll-prompt-arrow > div {
         width: 10px;
         height: 10px;
-        border-right: 3px solid #255e24;
-        border-bottom: 3px solid #255e24;
+        border-right: 3px solid #25AB52;
+        border-bottom: 3px solid #25AB52;
         transform: rotate(45deg) translateZ(1px);
     }
 
